# anna_dataset_creator

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt_portaud  LICENSE  main copy.cpp
include/: Audio_controller.hpp  windows_capture_object.hpp
src/: Audio_controller.cpp  main.cpp  windows_capture_object.cpp
